--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 
     <!-- IMPORTANTE: precisa ser type="module" -->
     <script type="module" src="./assets/js/app.js"></script>
+    <script type="module" src="supabaseClient.js"></script>
   </body>
 </html>
