--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>AVA rodando ✅</h1>
       <p>Teste de conexão com o Supabase:</p>
 
-      <div id="status">Carregando..ainda.</div>
+      <div id="status">Carregando..4.</div>
 
       <hr />
       <small>Se ficar em branco, abra o Console (F12) e veja o erro.</small>
