--- a/app.html
+++ b/app.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="box">
-          <h2>Próximos passos do projeto</h2>
+          <h2>Próximos passos do projeto teste rodando</h2>
           <ul>
             <li>Menu lateral (perfil, cursos, módulos, notas)</li>
             <li>Listagem “Meus cursos” (courses + course_offers)</li>
