--- a/login.html
+++ b/login.html
@@ -5,141 +5,260 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AVA • Entrar</title>
 
-    <link rel="stylesheet" href="./assets/css/site.css" />
-    <link rel="stylesheet" href="./assets/css/auth.css" />
-
-    <!-- Ícones -->
+    <!-- Bootstrap (framework) -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
+
+    <!-- Bootstrap Icons (site de ícones via CDN) -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+
+    <!-- Seu CSS -->
+    <link rel="stylesheet" href="./assets/css/auth.css" />
+
+    <!-- Bootstrap JS (para componentes) -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    ></script>
   </head>
 
-  <body class="auth">
-    <div class="auth-shell">
-      <section class="auth-card">
-        <!-- ESQUERDA -->
-        <aside class="auth-hero">
-          <div class="auth-brand">
-            <div class="auth-logo">AVA</div>
+  <body class="auth-bg">
+    <main class="container py-5">
+      <div class="auth-shell mx-auto">
+        <header class="mb-3">
+          <div class="d-flex align-items-center gap-2">
+            <div class="auth-logo">
+              <i class="bi bi-mortarboard-fill"></i>
+            </div>
             <div>
-              <h1>Ambiente Virtual</h1>
-              <p class="muted" style="margin: 2px 0 0">
-                Acesso a cursos, atividades, notas e certificados.
-              </p>
+              <h1 class="h4 mb-0">AVA</h1>
+              <small class="text-secondary">Acesse sua área do aluno</small>
             </div>
           </div>
+        </header>
 
-          <p>
-            Entre para acompanhar suas turmas, entregar atividades e ver seu
-            progresso. A Home do sistema é pública — você pode navegar mesmo sem
-            login.
-          </p>
+        <!-- Mensagens -->
+        <div id="msg" class="alert d-none" role="alert"></div>
 
-          <div class="auth-points">
-            <div class="auth-point">
-              <i class="bx bx-book-open"></i>
-              <div>
-                <b>Meus cursos</b>
-                <span
-                  >Conteúdos e links organizados por módulos e unidades.</span
+        <!-- Abas -->
+        <ul class="nav nav-pills auth-tabs mb-3" id="authTabs">
+          <li class="nav-item">
+            <button class="nav-link active" type="button" data-view="login">
+              <i class="bi bi-box-arrow-in-right me-1"></i> Entrar
+            </button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-link" type="button" data-view="signup">
+              <i class="bi bi-person-plus me-1"></i> Criar conta
+            </button>
+          </li>
+        </ul>
+
+        <!-- LOGIN -->
+        <section id="view-login">
+          <h2 class="h5 mb-2">Entrar</h2>
+          <p class="text-secondary mb-3">Faça login para acessar o AVA.</p>
+
+          <form id="login-form" class="vstack gap-3">
+            <div>
+              <label class="form-label">E-mail</label>
+              <div class="input-group">
+                <span class="input-group-text"
+                  ><i class="bi bi-envelope"></i
+                ></span>
+                <input
+                  id="login-email"
+                  type="email"
+                  class="form-control"
+                  placeholder="seuemail@exemplo.com"
+                  autocomplete="email"
+                  required
+                />
+              </div>
+            </div>
+
+            <div>
+              <label class="form-label">Senha</label>
+              <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-lock"></i></span>
+                <input
+                  id="login-pass"
+                  type="password"
+                  class="form-control"
+                  placeholder="••••••••"
+                  autocomplete="current-password"
+                  required
+                />
+                <button
+                  class="btn btn-outline-secondary"
+                  type="button"
+                  id="btn-toggle-pass-login"
+                  title="Mostrar/ocultar senha"
                 >
+                  <i class="bi bi-eye"></i>
+                </button>
+              </div>
+              <div class="d-flex justify-content-between mt-2">
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="#"
+                  id="link-forgot"
+                >
+                  Esqueci minha senha
+                </a>
+                <a
+                  class="link-secondary text-decoration-none"
+                  href="./index.html"
+                >
+                  Voltar
+                </a>
               </div>
             </div>
 
-            <div class="auth-point">
-              <i class="bx bx-task"></i>
-              <div>
-                <b>Atividades com prazo</b>
-                <span>Envio online, tentativas e critérios de aprovação.</span>
-              </div>
-            </div>
-
-            <div class="auth-point">
-              <i class="bx bx-award"></i>
-              <div>
-                <b>Certificado automático</b>
-                <span>Emitido ao atingir os critérios definidos na turma.</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="auth-footer">
-            <a href="./index.html">Voltar para a Home</a>
-          </div>
-        </aside>
-
-        <!-- DIREITA -->
-        <div class="auth-form">
-          <h2>Entrar</h2>
-          <p class="auth-sub">
-            Acesse com e-mail e senha ou continue com uma conta.
-          </p>
-
-          <!-- Botões extras (você ativa quando quiser no JS) -->
-          <div class="auth-actions">
-            <button class="btn-social" type="button" id="btnGoogle">
-              <i class="bx bxl-google"></i> Continuar com Google
+            <button class="btn btn-primary w-100" type="submit" id="btn-login">
+              <i class="bi bi-door-open me-1"></i> Entrar
             </button>
-            <button class="btn-social" type="button" id="btnGithub">
-              <i class="bx bxl-github"></i> Continuar com GitHub
-            </button>
-          </div>
 
-          <div class="auth-divider">OU</div>
+            <div class="text-center">
+              <div class="auth-divider my-3"><span>ou</span></div>
 
-          <form id="formLogin">
-            <label>
-              <b>E-mail</b>
-              <input
-                class="input"
-                type="email"
-                id="email"
-                required
-                autocomplete="email"
-              />
-            </label>
-
-            <div style="height: 10px"></div>
-
-            <label>
-              <b>Senha</b>
-              <input
-                class="input"
-                type="password"
-                id="password"
-                required
-                autocomplete="current-password"
-              />
-            </label>
-
-            <div class="row" style="margin-top: 14px">
-              <button class="btn btn-primary" type="submit" id="btnLogin">
-                <i class="bx bx-log-in"></i> Entrar
+              <button
+                class="btn btn-outline-dark w-100"
+                type="button"
+                id="btn-google"
+              >
+                <i class="bi bi-google me-1"></i> Continuar com Google
               </button>
 
-              <button class="btn" type="button" id="btnForgot">
-                Esqueci a senha
-              </button>
-            </div>
-
-            <div id="msg" class="auth-status"></div>
-
-            <div class="auth-links">
-              <a href="./signup.html">Criar conta</a>
-              <a href="./index.html">Home</a>
+              <small class="text-secondary d-block mt-2">
+                (Você precisa habilitar o provedor Google no Supabase)
+              </small>
             </div>
           </form>
+        </section>
 
-          <div class="auth-footer">
-            Dica: quando você estiver logada, o menu das páginas internas e da
-            Home vai mostrar seu
-            <b>Nome</b> (se existir) ou seu e-mail.
-          </div>
+        <!-- SIGNUP -->
+        <section id="view-signup" class="d-none">
+          <h2 class="h5 mb-2">Criar conta</h2>
+          <p class="text-secondary mb-3">Crie seu acesso para entrar no AVA.</p>
+
+          <form id="signup-form" class="vstack gap-3">
+            <div>
+              <label class="form-label">Nome</label>
+              <div class="input-group">
+                <span class="input-group-text"
+                  ><i class="bi bi-person"></i
+                ></span>
+                <input
+                  id="signup-name"
+                  type="text"
+                  class="form-control"
+                  placeholder="Seu nome completo"
+                  autocomplete="name"
+                  required
+                />
+              </div>
+            </div>
+
+            <div>
+              <label class="form-label">E-mail</label>
+              <div class="input-group">
+                <span class="input-group-text"
+                  ><i class="bi bi-envelope"></i
+                ></span>
+                <input
+                  id="signup-email"
+                  type="email"
+                  class="form-control"
+                  placeholder="seuemail@exemplo.com"
+                  autocomplete="email"
+                  required
+                />
+              </div>
+            </div>
+
+            <div>
+              <label class="form-label">Senha</label>
+              <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-lock"></i></span>
+                <input
+                  id="signup-pass"
+                  type="password"
+                  class="form-control"
+                  placeholder="mín. 8 caracteres"
+                  autocomplete="new-password"
+                  minlength="8"
+                  required
+                />
+                <button
+                  class="btn btn-outline-secondary"
+                  type="button"
+                  id="btn-toggle-pass-signup"
+                  title="Mostrar/ocultar senha"
+                >
+                  <i class="bi bi-eye"></i>
+                </button>
+              </div>
+              <small class="text-secondary">
+                Dica: use 8+ caracteres e misture letras e números.
+              </small>
+            </div>
+
+            <button class="btn btn-success w-100" type="submit" id="btn-signup">
+              <i class="bi bi-check2-circle me-1"></i> Criar conta
+            </button>
+
+            <div class="text-center">
+              <small class="text-secondary">
+                Já tem conta?
+                <a href="#" class="text-decoration-none" data-view="login"
+                  >Entrar</a
+                >
+              </small>
+            </div>
+          </form>
+        </section>
+
+        <!-- Modal "Esqueci minha senha" (simplificado) -->
+        <div class="auth-forgot d-none" id="forgot-box">
+          <hr class="my-4" />
+          <h3 class="h6 mb-2">
+            <i class="bi bi-life-preserver me-1"></i> Recuperar senha
+          </h3>
+          <p class="text-secondary mb-2">
+            Informe seu e-mail e enviaremos um link para redefinir sua senha.
+          </p>
+
+          <form id="forgot-form" class="row g-2">
+            <div class="col-12 col-md-8">
+              <input
+                id="forgot-email"
+                type="email"
+                class="form-control"
+                placeholder="seuemail@exemplo.com"
+                required
+              />
+            </div>
+            <div class="col-12 col-md-4">
+              <button
+                class="btn btn-outline-primary w-100"
+                type="submit"
+                id="btn-forgot"
+              >
+                Enviar link
+              </button>
+            </div>
+          </form>
         </div>
-      </section>
-    </div>
+      </div>
+    </main>
 
+    <!-- Seu JS (module) -->
     <script type="module" src="./assets/js/login.js"></script>
   </body>
 </html>
