--- a/admin.html
+++ b/admin.html
@@ -1,31 +1,93 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AVA • Admin</title>
-    <link rel="stylesheet" href="./assets/css/site.css" />
+    <title>Área Administrativa</title>
+
+    <link rel="stylesheet" href="./assets/css/admin.css" />
   </head>
 
-  <body data-page="admin" data-auth="required">
-    <div id="site-header"></div>
-
-    <div id="site-sidebar"></div>
-    <div id="sidebar-overlay"></div>
-
-    <main class="page">
-      <div class="container">
-        <section class="card">
-          <h1 style="margin: 0">Admin</h1>
-          <p style="color: var(--muted); margin-top: 8px">
-            Página base do Admin (a gente evolui depois).
-          </p>
-        </section>
+  <body>
+    <header class="topbar">
+      <div class="brand">
+        <div class="logo">AVA</div>
+        <div class="brand-text">
+          <div class="brand-title">Área Administrativa</div>
+          <div class="brand-subtitle">Acesso restrito</div>
+        </div>
       </div>
+
+      <div class="topbar-actions">
+        <div class="user-chip" id="userChip" hidden>
+          <span class="dot"></span>
+          <span id="userName">Carregando...</span>
+        </div>
+        <button class="btn btn-ghost" id="btnLogout" hidden>Sair</button>
+      </div>
+    </header>
+
+    <main class="container">
+      <!-- Loader / status -->
+      <section class="status-card" id="statusCard">
+        <div class="spinner" aria-hidden="true"></div>
+        <div class="status-text">
+          <h1>Verificando acesso…</h1>
+          <p>Você será redirecionado(a) se não tiver permissão.</p>
+        </div>
+      </section>
+
+      <!-- Conteúdo (só aparece se for admin) -->
+      <section class="content" id="adminContent" hidden>
+        <div class="grid">
+          <article class="card">
+            <h2>Painel</h2>
+            <p>
+              Coloque aqui o conteúdo da sua página administrativa (dashboard,
+              cadastros, etc.).
+            </p>
+            <div class="hint">
+              Dica: tudo que estava dentro do <code>&lt;body&gt;</code> do seu
+              HTML antigo pode entrar aqui.
+            </div>
+          </article>
+
+          <article class="card">
+            <h2>Ações rápidas</h2>
+            <ul class="list">
+              <li>Gerenciar cursos</li>
+              <li>Gerenciar turmas/ofertas</li>
+              <li>Gerenciar módulos/aulas</li>
+              <li>Ver matrículas</li>
+            </ul>
+            <div class="hint">
+              (Esses itens são exemplos — substitua pelos seus.)
+            </div>
+          </article>
+        </div>
+
+        <article class="card full">
+          <h2>Área principal</h2>
+          <p>
+            Se você já tem um dashboard pronto, é aqui que você cola o HTML dele
+            e, no JS, você cola a lógica de carregar dados.
+          </p>
+
+          <div class="placeholder">
+            <strong>Seu conteúdo entra aqui</strong>
+            <span>Ex.: tabela, filtros, gráficos, cards…</span>
+          </div>
+        </article>
+      </section>
     </main>
 
-    <div id="site-footer"></div>
+    <footer class="footer">
+      <span>AVA • Administração</span>
+      <span class="muted"
+        >Protegido por autenticação + verificação de papel</span
+      >
+    </footer>
 
-    <script type="module" src="./assets/js/layout.js"></script>
+    <script type="module" src="./assets/js/admin.js"></script>
   </body>
 </html>
